--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/react-pdf": "^6.2.0",
     "@types/react-swipeable": "^5.2.0",
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
