--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.0.0-beta.0",
     "@web3-react/network-connector": "^6.2.9",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/react": "^2.2.2",
     "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
     "ethers": "^5.7.2",
@@ -46,11 +48,14 @@
     "reactstrap": "^9.1.6",
     "recharts": "^2.1.16",
     "rsuite": "^5.23.1",
-    "styled-components": "^5.3.6",
+    "scrollreveal": "^4.0.9",
+    "styled-components": "^5.3.9",
     "use-dropbox-chooser": "^0.0.5",
+    "wagmi": "^0.12.6",
     "web-vitals": "^3.0.4",
     "web3": "^1.8.1",
-    "web3-js": "^1.0.5-beta.26"
+    "web3-js": "^1.0.5-beta.26",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
