--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/material": "^5.8.2",
     "@mui/x-data-grid": "^5.12.0",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@rsuite/icons": "^1.0.2",
     "@tailwindcss/forms": "^0.5.3",
@@ -37,7 +38,7 @@
     "react-dropbox-chooser": "^0.0.5",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.39.4",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.8.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.5",
