--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@web3-react/network-connector": "^6.2.9",
     "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
+    "bootstrap-dark-5": "^1.1.3",
     "ethers": "^5.7.2",
     "form-data": "^4.0.0",
     "framer-motion": "^7.6.6",
