--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-modal-bootstrap": "^1.1.1",
     "react-moment": "^1.1.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
