--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.8.1",
     "@material-ui/styles": "^4.11.5",
     "@mui/material": "^5.8.2",
