--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
     "@material-ui/styles": "^4.11.5",
     "@mui/material": "^5.8.2",
     "@mui/x-data-grid": "^5.12.0",
